src/App.css
@import url("https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap");
* {
  box-sizing: border-box;
  /* margin: 0;
  padding: 0; */
  font-family: "Bree Serif", serif;
  /* height: 100%; */
  /* background-image: linear-gradient(to top, #f43b47 0%, #453a94 100%); */
  /* color: #fff; */
  /* background-color: black; */
}
.coin-app {
  overscroll-behavior: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  /* margin-top: 64px; */
  color: #fff;
  background-color: black;
}
.coin-search {
  margin-bottom: 64px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.coin-text {
  margin: 32px 0;
  text-align: center;
}
.coin-input {
  padding-left: 16px;
  width: 300px;
  height: 50px;
  border-radius: 4px;
  border: none;
  background-image: linear-gradient(
    to right,
    #2f29af 0%,
    #b15119 31%,
    #2591a9 100%
  );
  /* background-image: linear-gradient(to top, #fcc5e4 0%, #fda34b 15%, #ff7882 35%, #c8699e 52%, #7046aa 71%, #0c1db8 87%, #020f75 100%); */
  color: #e2e2e2;
}
.coin-input::placeholder {
  color: #e2e2e2;
}

.green-text {
  color: lightgreen;
}

.red-text {
  color: lightcoral;
}
table th {
  text-align: center;
  padding: 16px;
}

td.table-img img {
  height: 64px;
  width: 64px;
}

table {
  table-layout: fixed;
  border-collapse: collapse;
  width: 100%;
}

td {
  border: 1px solid #000;
  width: 150px;
  text-align: center;
}

td + td {
  width: auto;
}

.ml-20 {
  margin-left: 20px;
}

.th-with-buttons {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  /* background-color: #212529 !important; */
}

.arrow-filter-button-group {
  display: flex;
  flex-direction: column;
}

.arrow-filter {
  border: none;
  background-color: transparent;
  /* height: 24px; */
}

.arrow-filter-up {
  color: green;
  font-size: 21px;
  font-weight: bold;
}

.arrow-filter-up:hover {
  color: lightgreen;
}

.arrow-filter-down {
  color: red;
  font-size: 21px;
}

.arrow-filter-down:hover {
  color: lightcoral;
}

